k8s/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 1
  annotations:
    nginx.ingress.kubernetes.io/upstream-hash-by: $ingress_name
  labels:
    release: readiness-probe-test
  name: readiness-probe-test
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: rd-probe.int.chainstack.com
    http:
      paths:
      - backend:
          service:
            name: readiness-probe-test
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - rd-probe.int.chainstack.com
    secretName: any-int-chainstack-com
